feat: go to ship page

--- a/InventoryManagementSystem/web/templates/header.xhtml
+++ b/InventoryManagementSystem/web/templates/header.xhtml
@@ -19,7 +19,8 @@
                         <ul id="header-ui">
                             <li><h:commandButton styleClass="nav-btn" value="Regist inventory information" action="register_inventory.xhtml" /></li>
                             <li><h:commandButton styleClass="nav-btn" value="Search inventory" action="search_inventory.xhtml"/></li>
-                            <li><h:commandButton styleClass="nav-btn" value="Incomplete information" action="show_incomplete.xhtml"/></li>                    
+                            <li><h:commandButton styleClass="nav-btn" value="Incomplete information" action="show_incomplete.xhtml"/></li>       
+                            <li><h:commandButton styleClass="nav-btn" value="Ship inventory" action="ship_inventory.xhtml"/></li>  
                         </ul>
                     </nav>
                 </h:form>
